# ViDove

./: .dockerignore  .env.example  .gitignore  0.26.0  DOCKER_DEPLOYMENT.md  DOCKER_MIGRATION_SUMMARY.md  DOCKER_TROUBLESHOOTING.md  Dockerfile.backend  Dockerfile.unified  LOCAL_WHISPER_IMPLEMENTATION.md  README.md  build-and-deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  docker-manage.sh  env.example  environment.yml  pigeonai_multiagent.py  pyproject.toml  quick-start.sh  requirements.txt  run_evaluation_text.py  run_evaluation_visual.py  test_timestamp_fix.py
.github/workflows/: docker-image.yml  python-app.yml
configs/: Qwen_asr_config.yaml  local_launch.yaml  task_config.yaml  whisper_config.yaml
demo/: README.md  env.example
demo/backend/: .gitignore  config.py  endpoints.py  main.py  models.py  requirements.txt  services.py
demo/frontend/: .dockerignore  Dockerfile  nginx.conf  package.json
demo/frontend/public/: index.html
demo/frontend/src/: App.css  index.tsx
demo/frontend/src/components/: AgentConversation.tsx  ConfigurationPanel.tsx  Header.tsx  TaskManager.tsx  index.ts
demo/frontend/src/hooks/: index.ts  useApiActions.ts  useAppState.ts
demo/frontend/src/services/: api.ts
demo/frontend/src/types/: api.ts
doc/: DOCKER_DEPLOYMENT.md  DOCKER_MIGRATION_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SETUP_COMPLETE.md  DOCKER_TROUBLESHOOTING.md  IMPLEMENTATION.md  Installation.md  ffmpeg_guide_en.md  ffmpeg_guide_zh.md  struct.md
domain_dict/: README_zh.md
domain_dict/SC2/: EN.txt  KR.txt  Translations_Table.csv  ZH.txt
entries/: __init_lib_path.py  app.py  config_schema.py  run.py  test_config_schema.py
evaluation/: batch_eval_whisper_delta.py  batch_processing_task.py  batch_processing_translation_task.py  entry.py  evaluate.py  evaluation.py  gemini.py  gemini_batch_processing_task.py  generate_eval_result.py  process_srt_for_evaluation.py  qwen_eval.py  readme.md  to_big_video_format.py
evaluation/delta_eval/: EVALUATION_IMPLEMENTATION_SUMMARY.md  batch_eval_whisper_delta.py
evaluation/qwen_eval/: README.md  main.py  recursive_parallel_translate.py  requirements.txt  single_eval.py
evaluation/scores/: LLM_eval.py  bleu_eval.py  cleaning.py  dovebench_sub_eval.py  multi_scores.py  multi_scores_combined.py  scomet_dcomet_eval.py  score.py  temp_test_bleu.py
evaluation/scores/SubER_main/: .gitignore  LICENSE  README.md  setup.cfg
evaluation/scores/SubER_main/suber/: __init__.py  __main__.py  concat_input_files.py  constants.py  data_types.py  sentence_segmentation.py  utilities.py
evaluation/scores/SubER_main/suber/file_readers/: __init__.py  file_reader_base.py  plain_file_reader.py  srt_file_reader.py
evaluation/scores/SubER_main/suber/hyp_to_ref_alignment/: __init__.py  levenshtein_alignment.py  time_alignment.py
evaluation/scores/SubER_main/suber/metrics/: cer.py  jiwer_interface.py  length_ratio.py  lib_ter.py  sacrebleu_interface.py  suber.py  suber_statistics.py
evaluation/scores/SubER_main/suber/tools/: align_hyp_to_ref.py  srt_to_plain.py
evaluation/scores/SubER_main/tests/: test_cer.py  test_file_readers.py  test_hyp_to_ref_alignment.py  test_jiwer_interface.py  test_length_ratio.py  test_main.py  test_sacrebleu_interface.py  test_sentence_segmentation.py  test_suber_metric.py  test_suber_statistics.py  test_tools.py  utilities.py
evaluation/utils/: alignment.py  cal_avg_scores_from_results.py  cal_avg_scores_in_csv.py  identify_dirty_data.py  qwen_srt_extractor.py
evaluation/utils/dataset_parser/: extract_ass_subtitles.py  remove_timestamp.py  to_big_video_format.py  vidove_dataset_adapter.py
evaluators/: abs_evaluator.py  comet.py  llm_eval.py  readme.md  scar_bleu.py  sub_alignment.py
src/: dict_util.py  openai_responses.py  output_render.py  task.py
src/ASR/: ASR.py
src/ASR/utils/: MLLM.py  openai_agent.py
src/SD/: SD.py  __init__.py
src/SRT/: srt.py  srt2ass.py
src/VAD/: VAD.py  utilities.py
src/audio/: ASR.py  VAD.py  audio_agent.py  audio_prompt.py  vad_agent.py
src/editorial/: __init__.py  editor.py  proofreader.py
src/memory/: abs_api_RAG.py  basic_rag.py  direct_search_RAG.py
src/srt_util/: srt.py
src/translators/: LLM.py  MTA.py  abs_api_RAG.py  abs_api_model.py  abs_model.py  assistant.py  basic_rag.py  direct_search_RAG.py  live_update_RAG.py  prompts.py  translator.py
src/vision/: gpt_vision_agent.py  vision_agent.py
src/web/: api_specs.yaml  web.py
tests/: __init_path__.py  test_chunk_alignment.py  test_output_render.py  test_preprocess.py  test_remove_punc.py  test_speaker_info.py  test_translation.py
tests/translation_test/: test1.srt  test2.srt
tools/: encrypt_apikey.py
web_frontend/: README.md
web_frontend/backend/: config.py  endpoints.py  main.py  models.py  services.py
web_frontend/frontend/: package-lock.json  package.json
web_frontend/frontend/src/: App.css  App.tsx  index.css
web_frontend/frontend/src/components/: ChatInterface.tsx  ConfigurationPanel.tsx  ErrorBanner.tsx  WelcomeScreen.tsx
web_frontend/frontend/src/services/: api.ts
(+1 files in other folders)
