[project]
name = "vidove"
version = "0.1.1"
requires-python = ">=3.10, <3.11"
dependencies = [
    "PyYAML==6.0.2",
    "whisper",
    "stable-ts>=2.9.0",
    "pydub",
    "yt-dlp",
    "ffmpeg-python==0.2.0",
    "aiohttp>=3.8.4, <4.0.0",
    "aiosignal==1.3.1",
    "async-timeout==4.0.2",
    "attrs==22.2.0",
    "certifi==2022.12.7",
    "clip",
    "charset-normalizer==3.1.0",
    "flask==2.3.3",
    "filelock==3.10.0",
    "frozenlist==1.3.3",
    "future==0.18.3",
    "idna==3.4",
    "jinja2==3.1.2",
    "librosa>=0.11.0",
    "llvmlite",
    "markupsafe==2.1.2",
    "more-itertools==9.1.0",
    "mpmath==1.3.0",
    "multidict==6.0.4",
    "networkx==3.0",
    "numba==0.56.4",
    "numpy==1.23.5",
    "openai-whisper>=20230314",
    "panda==0.3.1",
    "pandas==1.5.3",
    "python-dateutil==2.8.2",
    "pytz==2022.7.1",
    "regex==2022.10.31",
    "requests>=2.28.2",
    "six==1.16.0",
    "sympy==1.11.1",
    "torch>=2.2.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.8.0",
    "transformers>=4.35.2",
    "urllib3==1.26.15",
    "yarl==1.8.2",
    "sacrebleu==2.3.1",
    "pyenchant==3.2.2",
    "cryptography>=45.0.3",
    "opencv-python>=4.8.1.78",
    "starlette==0.36.3",
    "pydantic",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "tavily-python>=0.1.9",
    "torchaudio==2.2.0",
    "openai>=1.35.0,<2.0.0",
    "llama-index>=0.8.42",
    "langchain-community>=0.2.4",
    "llama-index-llms-azure-openai>=0.1.10",
    "langchain>=0.2.3",
    "langchain-core>=0.2.43",
    "gradio>=3.36.1",
    "google-genai>=1.1.0",
    "pyannote-audio==3.3.2",
    "httpx>=0.27.0, <0.28.0",
    "llama-index-embeddings-cohere==0.5.1",
    
]

[tool.uv]
# Allow uv to resolve conflicts
resolution = "highest"

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
