[metadata]
name = subtitle-edit-rate
version = 0.2.0
author = Patrick Wilken
author_email = pwilken@apptek.com
description = SubER: a metric for automatic evaluation of subtitle quality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apptek/SubER
project_urls =
    Bug Tracker = https://github.com/apptek/SubER/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    suber
    suber.file_readers
    suber.metrics
    suber.hyp_to_ref_alignment
    suber.tools
python_requires = >=3.6
install_requires =
    sacrebleu==2.0.0
    jiwer==2.3.0
    python_Levenshtein==0.12.2
    numpy
    dataclasses;python_version<'3.7'

[options.entry_points]
console_scripts =
    suber = suber.__main__:main

